--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 
 <body>
   
+  <!-- model -->
   <script>
     const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
     const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
   </script>
+  
+  
 </body>
 </html>
