--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
   <div class="d-flex justify-content-evenly">khoảng cách đều</div>
   
   
+  <!--scrollspy-->
+  document.querySelectorAll('#nav-tab>[data-bs-toggle="tab"]').forEach(el => {
+    el.addEventListener('shown.bs.tab', () => {
+      const target = el.getAttribute('data-bs-target')
+      const scrollElem = document.querySelector(`${target} [data-bs-spy="scroll"]`)
+      bootstrap.ScrollSpy.getOrCreateInstance(scrollElem).refresh()
+    })
+  })
+  
   
   <!-- model -->
   <script>
