--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 
 <body>
+  
+  <<!-- open in new tab -->
+  target="_blank"
+  
+  
   <!-- canh lề -->
   <div class="d-flex justify-content-start">trái hết</div>
   <div class="d-flex justify-content-end">phải hết</div>
