--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+  <<!-- link java script vào html -->>
+  <script src="script.js"></script>
   
   <<!-- open in new tab -->
   target="_blank"
